# CR-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: CRrenderer.h
include/components/: BBox.h  Camera.h  ObjectList.h  SphereObject.h  SurfaceObject.h  ThreeDObject.h  Tracable.h  TracableObject.h  TriangleMeshObject.h  VisibleObject.h
include/light/: AmbientLight.h  PointLight.h
include/material/: BSDF.h  DiffuseBSDF.h  GlassBSDF.h  MirrorBSDF.h
include/renderer/: RayTracingRenderer.h  Renderer.h
include/scene/: Scene.h
include/texture/: SphericalTextureMap.h  TextureMap.h
include/utils/: Log.h  Random.h  Ray.h  Spectrum.h  Transformation.h
src/: CMakeLists.txt  main.cpp
src/components/: BBox.cpp  Camera.cpp  ObjectList.cpp  SphereObject.cpp  SurfaceObject.cpp  ThreeDObject.cpp  Tracable.cpp  TracableObject.cpp  TriangleMeshObject.cpp  VisibleObject.cpp
src/light/: AmbientLight.cpp  PointLight.cpp
src/material/: BSDF.cpp  DiffuseBSDF.cpp  GlassBSDF.cpp  MirrorBSDF.cpp
src/renderer/: RayTracingRenderer.cpp  Renderer.cpp
src/scene/: Scene.cpp
src/texture/: SphericalTextureMap.cpp  TextureMap.cpp
src/utils/: Log.cpp  Random.cpp  Ray.cpp  Transformation.cpp
test/: CMakeLists.txt  TestInclude.h
test/components/: testBBox.cpp  testCamera.cpp  testSphereObject.cpp  testSurfaceObject.cpp  testTriangleMeshObject.cpp
test/material/: testMirrorBSDF.cpp
test/utils/: testLog.cpp  testRandom.cpp  testRay.cpp  testTransformation.cpp
